  Code cleanup: eliminate some desktop globals. (RFB)
- desk/deskbind.h desk/deskfpd.c: Code cleanup: eliminate never-referenced
  desktop globals. (RFB)
- desk/deskbind.h desk/deskfpd.c: Code cleanup: eliminate another desktop
  global. (RFB)
- desk/desk1.c desk/deskact.c desk/deskapp.c desk/deskbind.h desk/deskdir.c
  desk/deskfpd.c desk/deskfun.c desk/deskglob.c desk/deskinf.c
  desk/deskmain.c desk/deskobj.c desk/deskpro.c desk/deskrez.c
  desk/desksupp.c desk/deskwin.c: Merge infodef.h into deskbind.h. (RFB)
- desk/infodef.h: Removed, no longer required. (RFB)
- desk/deskbind.h desk/deskdir.c: Code cleanup: rename the desktop's 'FCB'
  structure to 'DTA' to reduce confusion. (RFB)

2013-08-17
- desk/desk1.c desk/deskbind.h desk/deskdir.c: Code cleanup: use HGLASS
  instead of HRGLASS. (RFB)
- desk/deskact.c desk/deskbind.h desk/deskmain.c desk/deskobj.c
  desk/desksupp.c desk/deskwin.c: Code cleanup: eliminate another desktop
  global. (RFB)
- desk/aesbind.h desk/deskact.c desk/deskdir.c desk/deskinf.c desk/deskobj.c
  desk/desksupp.c desk/deskwin.c desk/gembind.c include/obdefs.h:
  Code cleanup: set type of first arg to objc_xxx() as OBJECT *. (RFB)
- aes/gemmnlib.c aes/gemmnlib.h aes/gemwmlib.c aes/gemwmlib.h:
  Code cleanup: change scope of gl_datree, gl_wtree to local. (RFB)
- include/dos.h: Code cleanup: remove unused structure definitions. (RFB)

2013-09-04
- bios/acsi.c bios/acsi.h bios/blkdev.c: Fix ACSI to work on real disks,
  both ACSI & SCSI via converter.  Enhanced version of patch provided by
  Hampa Hug. (RFB)

2013-09-05
- bios/acsi.c: Code cleanup: remove meaningless #if/#endif. (RFB)

2013-09-21
- bios/linea.S vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_mouse.c: Added Line-A pixel
  set/get & sprite draw/undraw support. Contributed by Eero Tamminen. (VRI)
- vdi/vdi_mouse.c: Avoid side effects between mouse and sprite save area.
  Contributed by Eero Tamminen. (VRI)
- bios/dma.c bios/dma.h bios/mfp.c bios/mfp.h: Minor code tidy up. (RFB)